@@ -3,7 +3,7 @@
 ########################################################################
 # Extension Manager/Repository config file for ext: "l10nmgr"
 #
-# Auto generated 28-01-2009 17:45
+# Auto generated 02-02-2009 17:53
 #
 # Manual updates:
 # Only the data in the array - anything else is removed by next write.
@@ -15,8 +15,8 @@ $EM_CONF[$_EXTKEY] = array(
 	'description' => 'Module for managing localization import and export',
 	'category' => 'module',
 	'shy' => 0,
-	'version' => '3.3.0',
-	'dependencies' => '',
+	'version' => '3.3.1',
+	'dependencies' => 'static_info_tables',
 	'conflicts' => '',
 	'priority' => '',
 	'loadOrder' => '',
@@ -41,7 +41,7 @@ $EM_CONF[$_EXTKEY] = array(
 		'suggests' => array(
 		),
 	),
-	'_md5_values_when_last_written' => 'a:87:{s:9:"ChangeLog";s:4:"2f14";s:10:"README.txt";s:4:"ee2d";s:4:"TODO";s:4:"15a7";s:30:"class.l10nmgr_tcemain_hook.php";s:4:"b42c";s:24:"class.tx_l10nmgr_cm1.php";s:4:"ce4a";s:26:"class.tx_l10nmgr_index.php";s:4:"9428";s:21:"ext_conf_template.txt";s:4:"6667";s:12:"ext_icon.gif";s:4:"ec72";s:17:"ext_localconf.php";s:4:"9279";s:14:"ext_tables.php";s:4:"2c3a";s:14:"ext_tables.sql";s:4:"6653";s:13:"flags_new.png";s:4:"88c4";s:14:"flags_none.png";s:4:"4f46";s:12:"flags_ok.png";s:4:"9407";s:17:"flags_unknown.png";s:4:"13df";s:16:"flags_update.png";s:4:"ca64";s:23:"icon_tx_l10nmgr_cfg.gif";s:4:"ec72";s:30:"icon_tx_l10nmgr_priorities.gif";s:4:"dc05";s:13:"locallang.xml";s:4:"c6f2";s:25:"locallang_csh_l10nmgr.xml";s:4:"f83c";s:16:"locallang_db.xml";s:4:"c310";s:7:"tca.php";s:4:"4942";s:23:"settings/SDLPassolo.xfg";s:4:"89cf";s:31:"settings/SDLTradosTagEditor.ini";s:4:"f428";s:32:"settings/acrossL10nmgrConfig.dst";s:4:"7f83";s:34:"settings/dejaVuL10nmgrConfig.dvflt";s:4:"dffe";s:14:"mod1/clear.gif";s:4:"cc11";s:13:"mod1/conf.php";s:4:"3564";s:14:"mod1/index.php";s:4:"fa26";s:18:"mod1/locallang.xml";s:4:"2a3e";s:22:"mod1/locallang_mod.xml";s:4:"45a2";s:19:"mod1/moduleicon.gif";s:4:"ec72";s:14:"mod2/clear.gif";s:4:"cc11";s:13:"mod2/conf.php";s:4:"176b";s:14:"mod2/index.php";s:4:"77c7";s:13:"mod2/list.php";s:4:"63f8";s:18:"mod2/locallang.xml";s:4:"5d30";s:22:"mod2/locallang_mod.xml";s:4:"6c48";s:19:"mod2/moduleicon.gif";s:4:"8074";s:30:"tests/tx_xmltools_testcase.php";s:4:"42d1";s:12:"doc/TODO.txt";s:4:"2411";s:19:"doc/wizard_form.dat";s:4:"9c22";s:20:"doc/wizard_form.html";s:4:"e328";s:13:"cm1/clear.gif";s:4:"cc11";s:15:"cm1/cm_icon.gif";s:4:"ec72";s:12:"cm1/conf.php";s:4:"6e5e";s:13:"cm1/index.php";s:4:"8071";s:17:"cm1/locallang.xml";s:4:"ab38";s:15:"cm2/cm_icon.gif";s:4:"8074";s:12:"cm2/conf.php";s:4:"d912";s:13:"cm2/index.php";s:4:"d082";s:17:"cm2/locallang.xml";s:4:"a551";s:47:"models/class.tx_l10nmgr_CATXMLImportManager.php";s:4:"e11a";s:55:"models/class.tx_l10nmgr_l10nAccumulatedInformations.php";s:4:"8ce5";s:43:"models/class.tx_l10nmgr_l10nBaseService.php";s:4:"119c";s:45:"models/class.tx_l10nmgr_l10nConfiguration.php";s:4:"6473";s:48:"models/class.tx_l10nmgr_mkPreviewLinkService.php";s:4:"11b6";s:43:"models/class.tx_l10nmgr_translationData.php";s:4:"63e1";s:50:"models/class.tx_l10nmgr_translationDataFactory.php";s:4:"7049";s:39:"models/tools/class.tx_l10nmgr_tools.php";s:4:"7992";s:43:"models/tools/class.tx_l10nmgr_utf8tools.php";s:4:"76c5";s:42:"models/tools/class.tx_l10nmgr_xmltools.php";s:4:"2b36";s:27:"res/contrib/jquery-1.2.3.js";s:4:"7806";s:32:"res/contrib/jquery.dimensions.js";s:4:"0f94";s:32:"res/contrib/jquery.scrollable.js";s:4:"34ed";s:30:"res/contrib/jquery.tooltip.css";s:4:"2a0f";s:29:"res/contrib/jquery.tooltip.js";s:4:"01ca";s:20:"res/contrib/tabs.css";s:4:"2891";s:19:"res/contrib/tabs.js";s:4:"a448";s:41:"res/contrib/webtoolkit.scrollabletable.js";s:4:"f2b7";s:45:"views/class.tx_l10nmgr_abstractExportView.php";s:4:"8788";s:43:"views/class.tx_l10nmgr_l10nHTMLListView.php";s:4:"660a";s:44:"views/class.tx_l10nmgr_l10ncfgDetailView.php";s:4:"d788";s:35:"views/class.tx_l10nmgr_template.php";s:4:"2ad9";s:48:"views/excelXML/class.tx_l10nmgr_excelXMLView.php";s:4:"587a";s:33:"views/excelXML/excel_template.xml";s:4:"6b5d";s:44:"views/CATXML/class.tx_l10nmgr_CATXMLView.php";s:4:"cf8f";s:23:"templates/mod1_list.css";s:4:"3477";s:22:"templates/mod1_list.js";s:4:"63c8";s:23:"templates/mod1_list.php";s:4:"552c";s:10:"cli/README";s:4:"bc83";s:18:"cli/cli.export.php";s:4:"fab0";s:18:"cli/cli.import.php";s:4:"b188";s:15:"cm3/cm_icon.gif";s:4:"8074";s:12:"cm3/conf.php";s:4:"deb2";s:13:"cm3/index.php";s:4:"d1e0";s:17:"cm3/locallang.xml";s:4:"f9a4";}',
+	'_md5_values_when_last_written' => 'a:90:{s:9:"ChangeLog";s:4:"a191";s:10:"README.txt";s:4:"ee2d";s:4:"TODO";s:4:"15a7";s:30:"class.l10nmgr_tcemain_hook.php";s:4:"b42c";s:24:"class.tx_l10nmgr_cm1.php";s:4:"ce4a";s:26:"class.tx_l10nmgr_index.php";s:4:"9428";s:21:"ext_conf_template.txt";s:4:"00ff";s:12:"ext_icon.gif";s:4:"ec72";s:17:"ext_localconf.php";s:4:"9279";s:14:"ext_tables.php";s:4:"2c3a";s:14:"ext_tables.sql";s:4:"6653";s:13:"flags_new.png";s:4:"88c4";s:14:"flags_none.png";s:4:"4f46";s:12:"flags_ok.png";s:4:"9407";s:17:"flags_unknown.png";s:4:"13df";s:16:"flags_update.png";s:4:"ca64";s:23:"icon_tx_l10nmgr_cfg.gif";s:4:"ec72";s:30:"icon_tx_l10nmgr_priorities.gif";s:4:"dc05";s:13:"locallang.xml";s:4:"c6f2";s:25:"locallang_csh_l10nmgr.xml";s:4:"f83c";s:16:"locallang_db.xml";s:4:"c310";s:7:"tca.php";s:4:"c3ee";s:18:"settings/MemoQ.xml";s:4:"524c";s:23:"settings/SDLPassolo.xfg";s:4:"89cf";s:31:"settings/SDLTradosTagEditor.ini";s:4:"f428";s:32:"settings/acrossL10nmgrConfig.dst";s:4:"7f83";s:34:"settings/dejaVuL10nmgrConfig.dvflt";s:4:"dffe";s:14:"mod1/clear.gif";s:4:"cc11";s:13:"mod1/conf.php";s:4:"3564";s:14:"mod1/index.php";s:4:"fa26";s:18:"mod1/locallang.xml";s:4:"2a3e";s:22:"mod1/locallang_mod.xml";s:4:"45a2";s:19:"mod1/moduleicon.gif";s:4:"ec72";s:14:"mod2/clear.gif";s:4:"cc11";s:13:"mod2/conf.php";s:4:"176b";s:14:"mod2/index.php";s:4:"77c7";s:13:"mod2/list.php";s:4:"3f67";s:18:"mod2/locallang.xml";s:4:"5d30";s:22:"mod2/locallang_mod.xml";s:4:"6c48";s:19:"mod2/moduleicon.gif";s:4:"8074";s:30:"tests/tx_xmltools_testcase.php";s:4:"42d1";s:12:"doc/TODO.txt";s:4:"2411";s:19:"doc/wizard_form.dat";s:4:"9c22";s:20:"doc/wizard_form.html";s:4:"e328";s:13:"cm1/clear.gif";s:4:"cc11";s:15:"cm1/cm_icon.gif";s:4:"ec72";s:12:"cm1/conf.php";s:4:"6e5e";s:13:"cm1/index.php";s:4:"d7ee";s:17:"cm1/locallang.xml";s:4:"fa4c";s:15:"cm2/cm_icon.gif";s:4:"8074";s:12:"cm2/conf.php";s:4:"d912";s:13:"cm2/index.php";s:4:"0a49";s:17:"cm2/locallang.xml";s:4:"a551";s:47:"models/class.tx_l10nmgr_CATXMLImportManager.php";s:4:"e11a";s:55:"models/class.tx_l10nmgr_l10nAccumulatedInformations.php";s:4:"8ce5";s:43:"models/class.tx_l10nmgr_l10nBaseService.php";s:4:"119c";s:45:"models/class.tx_l10nmgr_l10nConfiguration.php";s:4:"6473";s:48:"models/class.tx_l10nmgr_mkPreviewLinkService.php";s:4:"11b6";s:43:"models/class.tx_l10nmgr_translationData.php";s:4:"63e1";s:50:"models/class.tx_l10nmgr_translationDataFactory.php";s:4:"7049";s:39:"models/tools/class.tx_l10nmgr_tools.php";s:4:"c74b";s:43:"models/tools/class.tx_l10nmgr_utf8tools.php";s:4:"76c5";s:42:"models/tools/class.tx_l10nmgr_xmltools.php";s:4:"2b36";s:27:"res/contrib/jquery-1.2.3.js";s:4:"7806";s:32:"res/contrib/jquery.dimensions.js";s:4:"0f94";s:32:"res/contrib/jquery.scrollable.js";s:4:"34ed";s:30:"res/contrib/jquery.tooltip.css";s:4:"2a0f";s:29:"res/contrib/jquery.tooltip.js";s:4:"01ca";s:20:"res/contrib/tabs.css";s:4:"2891";s:19:"res/contrib/tabs.js";s:4:"a448";s:41:"res/contrib/webtoolkit.scrollabletable.js";s:4:"f2b7";s:45:"views/class.tx_l10nmgr_abstractExportView.php";s:4:"8788";s:43:"views/class.tx_l10nmgr_l10nHTMLListView.php";s:4:"660a";s:44:"views/class.tx_l10nmgr_l10ncfgDetailView.php";s:4:"d788";s:35:"views/class.tx_l10nmgr_template.php";s:4:"2ad9";s:48:"views/excelXML/class.tx_l10nmgr_excelXMLView.php";s:4:"587a";s:33:"views/excelXML/excel_template.xml";s:4:"6b5d";s:44:"views/CATXML/class.tx_l10nmgr_CATXMLView.php";s:4:"cf8f";s:23:"templates/mod1_list.css";s:4:"3477";s:22:"templates/mod1_list.js";s:4:"63c8";s:23:"templates/mod1_list.php";s:4:"552c";s:10:"cli/README";s:4:"bc83";s:18:"cli/cli.export.php";s:4:"a62b";s:18:"cli/cli.import.php";s:4:"549c";s:17:"cli/locallang.xml";s:4:"0812";s:25:"service/l10nmgrImport.php";s:4:"f354";s:15:"cm3/cm_icon.gif";s:4:"8074";s:12:"cm3/conf.php";s:4:"deb2";s:13:"cm3/index.php";s:4:"d1e0";s:17:"cm3/locallang.xml";s:4:"f9a4";}',
 	'suggests' => array(
 	),
 );
